fixed alignment issues

--- a/src/feature-modules/FA-Embedded-Image-Viewer/src/styles/Style.css
+++ b/src/feature-modules/FA-Embedded-Image-Viewer/src/styles/Style.css
@@ -21,6 +21,7 @@
 
 #eiv-submission-container {
     -webkit-user-drag: none;
+    align-self: center;
 }
 
 .eiv-submission-img {
